move & fix links

--- a/Models/FlowMatching/2024.06.17_DiTTo-TTS.md
+++ b/Models/FlowMatching/2024.06.17_DiTTo-TTS.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "Title"
+- 标题: "DiTTo-TTS: Diffusion Transformers for Scalable Text-to-Speech without Domain-Specific Factors"
 - 作者:
   - 01 Keon Lee - KRAFTON.AI
   - 02 Dong Won Kim - KRAFTON.AI
@@ -15,15 +15,16 @@
   - [Github]
   - [Demo](https://ditto-tts.github.io/)
 - 文件:
-  - [ArXiv](_PDF/2406.11427v1__DiTTo-TTS__Efficient_&_Scalable_Zero-Shot_TTS_with_Diffusion_Transformer.pdf)
+  - [ArXiv](../Diffusion/_PDF/2406.11427v1__DiTTo-TTS__Efficient_&_Scalable_Zero-Shot_TTS_with_Diffusion_Transformer.pdf)
   - [Publication]
 
 </details>
 
 ## Abstract: 摘要
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 Large-scale diffusion models have shown outstanding generative abilities across multiple modalities including images, videos, and audio.
 However, text-to-speech (TTS) systems typically involve domain-specific modeling factors (e.g., phonemes and phoneme-level durations) to ensure precise temporal alignments between text and speech, which hinders the efficiency and scalability of diffusion models for TTS.
@@ -48,21 +49,21 @@ Our speech samples are available at https://ditto-tts.github.io.
 ## 1.Introduction: 引言
 
 Large-scale diffusion models have demonstrated impressive generative abilities in a wide range of fields including images [1], [2], videos [3], [4], and audio ([WaveGrad](../Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../Vocoder/2020.09.21_DiffWave.md)).
-The integration of [latent diffusion models (LDMs)](2021.12.20_LDM.md) further amplifies their popularity [8], [9], [10], as these models significantly enhance computational efficiency.
-This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](2021.12.20_LDM.md)).
+The integration of [latent diffusion models (LDMs)](../Diffusion/_2021.12.20_LDM.md) further amplifies their popularity [8], [9], [10], as these models significantly enhance computational efficiency.
+This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](../Diffusion/_2021.12.20_LDM.md)).
 However, applying LDMs to text-to-speech (TTS) presents unique challenges because TTS requires precise alignment between text and generated speech over time.
-Hence, their application to TTS often requires a complex pipeline, incorporating speech domain-specific modeling such as phoneme and duration ([Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)).
-Without these components, generation performance tends to be suboptimal ([Simple-TTS](../_tmp/Simple-TTS.md), [E3-TTS](2023.11.02_E3_TTS.md)), while their inclusion hinders the model efficiency and scalability.
+Hence, their application to TTS often requires a complex pipeline, incorporating speech domain-specific modeling such as phoneme and duration ([Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md), [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)).
+Without these components, generation performance tends to be suboptimal ([Simple-TTS](../Diffusion/2023.09.23_Simple-TTS.md), [E3-TTS](../Diffusion/2023.11.02_E3_TTS.md)), while their inclusion hinders the model efficiency and scalability.
 
 In this work, we present a latent diffusion model for TTS that is integrated with off-the-shelf pre-trained text and speech encoders without relying on the speech domain-specific modeling.
 Our method addresses the challenge of aligning text and speech solely through cross-attention mechanisms.
 Furthermore, we introduce a module that predicts the total duration of the generated speech from a given text and speech prompt, rather than determining the duration of each individual input token.
 To accomplish this, we conduct a network architecture ablation to identify a model specifically suited for TTS applications.
-Consequently, we adopt the [Diffusion Transformer (DiT)](2022.12.19_DiT.md) to TTS, naming our method ***DiTTo-TTS*** (or simply ***DiTTo***).
+Consequently, we adopt the [Diffusion Transformer (DiT)](../Diffusion/_2022.12.19_DiT.md) to TTS, naming our method ***DiTTo-TTS*** (or simply ***DiTTo***).
 We also explore the significance of leveraging aligned text and speech representations, showing that performance can be enhanced by either using a text encoder jointly trained with speech data or a speech autoencoder with an auxiliary language modeling objective alongside the reconstruction objective.
 
 Our comprehensive experiments on English-only and multilingual evaluation demonstrate that our model not only simplifies the training process but also achieves superior or comparable zero-shot performance to state-of-the-art models in terms of naturalness, intelligibility, and speaker similarity.
-The base-sized ***DiTTo*** surpasses a state-of-the-art autoregressive model ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)), offering an inference speed 4.6 times faster and a model size 3.84 times smaller.
+The base-sized ***DiTTo*** surpasses a state-of-the-art autoregressive model ([CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)), offering an inference speed 4.6 times faster and a model size 3.84 times smaller.
 Additionally, we demonstrate that our model scales effectively with increases in both data and model sizes.
 
 ## 2.Related Works: 相关工作
@@ -70,38 +71,39 @@ Additionally, we demonstrate that our model scales effectively with increases in
 ### Large-scale TTS
 Recently, large-scale TTS research progresses actively in two main directions: LLM-based autoregressive (AR) TTS and non-autoregressive (Non-AR) TTS.
 A prominent feature of LLMs is the scalability [16], [17] and their proficiency in zero-shot learning tasks, demonstrating significant capabilities without prior specific training on those tasks [18], [19], [20], [21].
-Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../SpeechLM/2023.11.14_Qwen-Audio.md)).
-[VALL-E](../SpeechLM/2023.01.05_VALL-E.md) employs [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
-[CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
-Although this approach removes the need for cascaded modeling ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
+Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md); [Audi../SpeechLM/ST2S/2022.09.07_AudioLM.mdAudioLM.md); [SPEAR-TTS](../SpeechLM_TTS/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../SpeechLM/ST2T/2023.11.14_Qwen-Audio.md)).
+[VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md) employs [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
+[CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
+Although this approach removes the need for cascaded modeling ([VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
 On the other hand, Non-AR generative models are employed to enhance the efficiency of TTS systems.
 [VoiceBox](../../Models/SpeechLM/2023.06.23_VoiceBox.md) utilizes a flow matching [32] to generate speech, effectively casting the TTS task into a speech infilling task.
-NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
+NaturalSpeech series ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](_2021.12.20_LDM.md), in../Diffusion/_2021.12.20_LDM.mdy modules for controllability of various speech attribute such as content, prosody, and timbre.
 However, requiring supplementary data beyond speech-transcription pairs hinders scalability.
-[Simple-TTS](../_tmp/Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
-Similarly, [E3-TTS](2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
+[Simple-TTS](../Diffusion/2023.09.23_Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
+Similarly, [E3-TTS](../Diffusion/2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
 However, both models have limitations in audio quality and impose a fixed length on the target audio, which is a significant constraint for speech generation.
 
 ### Latent Diffusion Model (LDM)
-[LDM](2021.12.20_LDM.md) improves modeling efficiency of the diffusion process model [1], [34] by operating in a latent space, achieving remarkable performance in generating realistic samples.
-Initially applied in image generation, their success is attributed to the reduced dimensionality of the latent space, facilitating efficient training and sampling ([LDM](2021.12.20_LDM.md)).
+[LDM](../Diffusion/_2021.12.20_LDM.md) improves modeling efficiency of the diffusion process model [1], [34] by operating in a latent space, achieving remarkable performance in generating realistic samples.
+Initially applied in image generation, their success is attributed to the reduced dimensionality of the latent space, facilitating efficient training and sampling ([LDM](../Diffusion/_2021.12.20_LDM.md)).
 Notably, guided diffusion [35], [36] has been expanded to various applications of LDMs, such as image editing [37] and image retrieval [38].
 In the field of audio signals, techniques such as style transfer, inpainting, and super-resolution have been explored, along with text-guided audio and speech generation [39], [40].
-In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) necessitates domain-specific elements such as phonemes, phoneme-level durations, and pitch.
+In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)) necessitates domain-specific elements such as phonemes, phoneme-level durations, and pitch.
 This is primarily due to the need for precise temporal alignment between text and speech, as well as the higher fidelity requirements inherent in audio data.
 
 ### Neural Audio Codec
-Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
+Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md); [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md-E.md)).
 Recent advancements employ an encoder-decoder architecture coupled with Residual Vector Quantization (RVQ) [41], [42], [43] to transform raw audio waves into discretized tokens.
 For example, [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) converts 24,000 Hz mono waveforms into 75 Hz latents.
-With a similar architecture, by focusing the compression specifically on speech rather than general audio signals, Mel-VAE ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) achieves approximately 10.76 Hz latents by compressing the mel-spectrogram.
+With a similar architecture, by focusing the compression specifically on speech rather than general audio signals, Mel-VAE ([CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)) achieves approximately 10.76 Hz latents by compressing the mel-spectrogram.
 This reduction significantly lowers the computational cost of the speech generation module.
-Another research direction of improving neural audio codecs for TTS systems is injecting semantic information using large language models (LLMs) ([SpeechTokenizer](../../Models/SpeechCodec/2023.08.31_SpeechTokenizer.md)).
+Another research direction of improving neural audio codecs for TTS systems is injecting semantic information using large language models (LLMs) ([SpeechTokenizer](../Tokenizers/2023.08.31_SpeechTokenizer.md)).
 
 ## 3.Methodology: 方法
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 We present a latent diffusion model (LDM) for TTS that enables the use of off-the-shelf pre-trained text and speech encoders without relying on speech domain-specific modeling, such as phoneme and duration.
 Toward this goal, we employ the following two approaches:
@@ -118,15 +120,16 @@ Toward this goal, we employ the following two approaches:
 
 ### 3.1.Preliminary: 预备知识
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 Diffusion models [1], [34] are a class of generative models that iteratively transform a simple noise distribution into a complex data distribution through a stochastic denoising process.
 They define a forward process that progressively adds Gaussian noise to the input data as time step increases.
 The reverse generative process then estimates the added noise to reconstruct the original data.
 Conditional diffusion models enhance this framework by incorporating additional information, such as text descriptions in text-to-image generation [35], [45] or phonemes and their durations in TTS ([Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)), [46].
-While diffusion models can operate directly on real-world data, many of them are applied in the latent space ([LDM](2021.12.20_LDM.md); [8], [10], [47].
-Thanks to the reduced dimensionality, this approach improves computational efficiency and output quality by allowing diffusion models to focus on the semantic information of the data while the autoencoder handles the high-frequency details that are less perceptible ([LDM](2021.12.20_LDM.md)).
+While diffusion models can operate directly on real-world data, many of them are applied in the latent space ([LDM](../Diffusion/_2021.12.20_LDM.md); [8], [10], [47].
+Thanks to the reduced dimensionality, this approach improves computational efficiency and output quality by allowing diffusion models to focus on the semantic information of the data while the autoencoder handles the high-frequency details that are less perceptible ([LDM](../Diffusion/_2021.12.20_LDM.md)).
 
 </details>
 <br>
@@ -138,8 +141,9 @@ Thanks to the reduced dimensionality, this approach improves computational effic
 虽然扩散模型能够直接在真实世界数据上操作, 但大多都应用于隐空间.
 由于维度的降低, 这种方法通过允许扩散模型专注于数据的语义信息, 同时自编码器处理那些不太明显的, 高频的细节, 从而提高了计算效率和输出质量.
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 In our setting, a conditional LDM can be formulated as follows.
 Given speech audio, an autoencoder produces its latent representation $z_{speech}$, and the diffusion model is trained to predict $z_{speech}$ at each diffusion step $t \in [1, T]$ conditioned on a text token sequence $x$.
@@ -164,8 +168,9 @@ $$
 $$
 
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 To enrich the contextual information and facilitate zero-shot audio prompting, we incorporate a random span masking into the model training following ([VoiceBox](../../Models/SpeechLM/2023.06.23_VoiceBox.md); [Audiobox](../SpeechLM/2023.12.25_Audiobox.md)).
 We input $z_{mask}^{(t)} := m\odot z^{(t)} + (1-m)\odot z_{speech}$ to the model, where $\odot$ indicates element-wise multiplication and the binary masking $m$ fully masks with the probability of $0.1$ or partially masks a random contiguous segment whose size is between $70\%$ and $100\%$ of data.
@@ -189,8 +194,9 @@ $$
 
 ### 3.2.Model & Training: 模型与训练
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 An overview of our proposed method is presented in Figure.01.
 
@@ -199,10 +205,11 @@ An overview of our proposed method is presented in Figure.01.
 
 本文方法如图 01 所示.
 
-![](Images/2024.06.17_DiTTo-TTS_Fig.01.png)
+![](../Diffusion/Images/2024.06.17_DiTTo-TTS_Fig.01.png)
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 #### Text Encoder
 We employ a text encoder from a pre-trained large language model $p_{\phi}$, which is parameterized by $\phi$.
@@ -220,8 +227,9 @@ We denote the output of the text encoder by $z_{text}$.
 在训练扩散模型以进行文本转语音时, 模型的参数保持固定.
 我们用 $z_{text}$ 表示文本编码器的输出.
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 #### Neural Audio Codec
 A neural audio codec, which is parameterized by $\psi$, comprises of three components:
@@ -251,10 +259,11 @@ $$
     Loss(\psi) = Loss_{NAC}(\psi) + \lambda Loss_{LM}(\psi),\quad Loss_{LM}(\psi) = -\log p_{\phi}(x|f_{z_{speech}})
 $$
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
-where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)).
+where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)).
 $\lambda$ controls the contribution of $Loss_{LM}$, with $\lambda = 0$ indicating the pre-training phase.
 When $\lambda 0$, a pre-trained language decoder performs causal language modeling on text token sequences $x$, based on the speech latent vector $z_{speech}$.
 While the parameters of language model decoder are fixed, gradients are backpropagated to adjust the linear mappings $f(z_{speech})$.
@@ -268,8 +277,9 @@ This training strategy aligns the speech latents with the linguistic latents of 
 虽然语言模型解码器的参数固定, 但梯度会反向传播到调整线性映射 $f(z_{speech})$ 上.
 这种训练策略在自编码过程中将语音隐向量与预训练语言模型的语言潜在空间对齐.
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 #### Diffusion Model
 We are given text embedding $z_{text}$ and speech embedding $z_{speech}$.
@@ -280,7 +290,7 @@ $$
 $$
 
 where $z^{(t)}_{mask} = m \odot z(t) + (1 − m) \odot z_{speech}$ is the masked input latent, $m$ is the binary span masking, and $t$ is the diffusion time step.
-We apply classifier-free guidance (CFG) [36] and adopt the diffusion noise schedule from [Simple-TTS](../_tmp/Simple-TTS.md).
+We apply classifier-free guidance (CFG) [36] and adopt the diffusion noise schedule from [Simple-TTS](../Diffusion/2023.09.23_Simple-TTS.md).
 
 </details>
 <br>
@@ -295,10 +305,11 @@ $$
 $$
 
 其中 $z^{(t)}_{mask} = m \odot z(t) + (1 − m) \odot z_{speech}$ 是掩盖输入隐向量, $m$ 是二进制跨度掩膜, $t$ 是扩散时间步.
-我们采用分类无监督指导 (CFG) [36], 并采用 [Simple-TTS](../_tmp/Simple-TTS.md) 中的扩散噪声调度.
+我们采用分类无监督指导 (CFG) [36], 并采用 [Simple-TTS](../Diffusion/2023.09.23_Simple-TTS.md) 中的扩散噪声调度.
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 #### Speech Length Predictor
 We introduce a model designed to predict the total length of a generated speech for a given text rather than to estimate each phoneme’s duration, and the input noise of diffusion model is set by the length from the speech length predictor at inference time.
@@ -324,13 +335,14 @@ The model is trained separate from the diffusion model, using the cross-entropy 
 
 ### 3.3.Model Architecture: 模型架构
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 We conduct a comprehensive model architecture search to identify the most suitable diffusion-based model for TTS, resulting in the adoption of the Diffusion Transformer (DiT) [10] model (see Section 6.1).
 We adopt the DiT model in TTS while incorporating recent architectural advancements
 for transformer variants, such as the gated linear unit with GELU activation [50], rotary position embeddings [51], and cross-attention with global adaptive layer normalization (AdaLN) [52].
-For the latent space, we employ Mel-VAE introduced in ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) which is able to compress audio sequences approximately seven times more than [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md), yet maintaining superior quality.
+For the latent space, we employ Mel-VAE introduced in ([CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)) which is able to compress audio sequences approximately seven times more than [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md), yet maintaining superior quality.
 Due to space limitations, additional details regarding model configurations are provided in Appendix 8.4.
 We also detail down our noise scheduler and CFG in Appendix 8.6.
 
@@ -339,7 +351,7 @@ We also detail down our noise scheduler and CFG in Appendix 8.6.
 
 我们构造一个全面的模型架构搜索, 以确定适合 TTS 的扩散模型, 并采用扩散 Transformer (DiT) [10] 模型 (参见第 6.1 节).
 我们在 TTS 中采用 DiT 模型, 并融入了最近的 Transformer 变体的架构进步, 如门控线性单元 (GELU) 激活的门控线性单元 [50], 旋转位置嵌入 [51], 以及交叉注意力与全局自适应层归一化 (AdaLN) [52].
-对于隐空间, 我们采用 Mel-VAE ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) 作为替代品, 它能够在音频序列的近似压缩率上比 [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) 提高了 7 倍, 同时保持优秀的质量.
+对于隐空间, 我们采用 Mel-VAE ([CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)) 作为替代品, 它能够在音频序列的近似压缩率上比 [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) 提高了 7 倍, 同时保持优秀的质量.
 由于篇幅限制, 我们在附录 8.4 中提供了模型配置的详细信息.
 我们还在附录 8.6 中详细介绍了噪声调度和 CFG.
 
@@ -378,8 +390,9 @@ We also detail down our noise scheduler and CFG in Appendix 8.6.
 
 ## 7.Conclusions: 结论
 
-<details>
-<summary>原文</summary>
+<table>
+<tr>
+<td width="50%">
 
 We presented ***DiTTo-TTS***, a latent diffusion model for text-to-speech (TTS) that leverages cross-attention and the prediction of the total length of latent speech representations to achieve text-speech alignment.
 We demonstrated that the proposed method shows exceptional zero-shot performance in naturalness, intelligibility, and speaker similarity, all without relying on domain-specific elements such as phonemes and durations, while simplifying the training process as well.
