--- a/Models/SpeechLM_TTS/2024.03.25_VoiceCraft.md
+++ b/Models/SpeechLM_TTS/2024.03.25_VoiceCraft.md
@@ -16,8 +16,8 @@
   - [Github](https://github.com/jasonppy/VoiceCraft)
   - [Demo](https://jasonppy.github.io/VoiceCraft_web)
 - 文件:
-  - [ArXiv](_PDF/2403.16973v3__VoiceCraft__Zero-Shot_Speech_Editing_&_TTS_in_the_Wild.pdf)
-  - [Publication](_PDF/2403.16973p0__VoiceCraft__ACL2024.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2403.16973v3__VoiceCraft__Zero-Shot_Speech_Editing_&_TTS_in_the_Wild.pdf)
+  - [Publication](../SpeechLM/_PDF/2403.16973p0__VoiceCraft__ACL2024.pdf)
 
 </details>
 
@@ -26,7 +26,7 @@
 We introduce VoiceCraft, a token infilling neural codec language model, that achieves state-of-the-art performance on both speech editing and zero-shot text-to-speech (TTS) on audiobooks, internet videos, and podcasts1.
 VoiceCraft employs a Transformer decoder architecture and introduces a token rearrangement procedure that combines causal masking and delayed stacking to enable generation within an existing sequence.
 On speech editing
-tasks, VoiceCraft produces edited speech that is nearly indistinguishable from unedited recordings in terms of naturalness, as evaluated by humans; for zero-shot TTS, our model outperforms prior SotA models including [VALL-E (2023)](2023.01.05_VALL-E.md) and the popular commercial model [XTTS-v2 (2023)](2024.06.07_XTTS.md)
+tasks, VoiceCraft produces edited speech that is nearly indistinguishable from unedited recordings in terms of naturalness, as evaluated by humans; for zero-shot TTS, our model outperforms prior SotA models including [VALL-E (2023)](ST2S/2023.01.05_VALL-E.md-E.md) and the popular commercial model [XTTS-v2 (2023)](2024.06.07_X../SpeechLM/2024.06.07_XTTS.md
 Crucially, the models are evaluated on challenging and realistic datasets, that consist of diverse accents, speaking styles, recording conditions, and background noise and music, and our model performs consistently well compared to other models and real recordings.
 In particular, for speech editing evaluation, we introduce a high quality, challenging, and realistic dataset named REALEDIT.
 We encourage readers to listen to the demos at [this http url](https://jasonppy.github.io/VoiceCraft_web).
@@ -48,7 +48,7 @@ We believe that the realism and diversity of REALEDITmakes it a reliable indicat
 
 In the subjective human listening tests, VOICE-CRAFTsignificantly outperforms prior SotA speech editing model on REALEDIT.
 Importantly,the edited speech produced by VOICECRAFTis nearly indistinguishable from the original unedited recording in terms of naturalness.
-We found that VOICECRAFT generalizes well to zero-shot TTS without any finetuning, achieving SotA perfor-mance on a dataset comprised of audiobooks and YouTube videos, outperforming strong baselines including reproduced [VALL-E (2023)](2023.01.05_VALL-E.md) and the popular commercial model XTTS v2 (CO-QUI, 2023).
+We found that VOICECRAFT generalizes well to zero-shot TTS without any finetuning, achieving SotA perfor-mance on a dataset comprised of audiobooks and YouTube videos, outperforming strong baselines including reproduced [VALL-E (2023)](ST2S/2023.01.05_VALL-E.md-E.md) and the popular commercial model XTTS v2 (CO-QUI, 2023).
 
 In summary, our contributions are:
 1. We introduce VOICECRAFT, a neural codec language model for speech editing that gener-ates synthesized speech that is nearly indistin-guishable from in-the-wild recordings accord-ing to human listeners.
@@ -61,7 +61,7 @@ We also release the code and model weights for VOICECRAFT.
 
 ### 2.1.NCLM & Zero-Shot TTS
 
-Tokenizing speech signals into sequences of learnable, discrete units and then training a language model on the resulting unit sequences was initially proposed in the context of textless NLP (Hsu et al., 2021; Lakhotia et al.,2021; Kharitonov et al., 2021b; Nguyen et al.,2022), where the goal is to perform NLP tasks directly on spoken utterances without the need to first transcribe the speech into text. Recently,NCLMs that operates on tokens from Residual vec-tor quantization (RVQ)-based models (Zeghidour et al., 2021; Defossez et al., 2022) attract increased attention due to its high quality generation. For example, AudioLM (Borsos et al., 2022a) exhibits strong performance on long-term coherent speech continuation. Zero-shot TTS is a task where a model needs to synthesize speech in a target voice which was unseen during training, given only the target transcript and a short reference recording of the target voice. Framing zero-shot TTS as transcript-conditioned speech continuation, [VALL-E (2023)](2023.01.05_VALL-E.md) and [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md) are the first applications of NCLMs on this task, significantly outperforming non-NCLM approaches. Zhang et al. (2023) extends VALL-E to cross-lingual TTS. Guo et al. (2022); Yang et al.(2023); Liu et al. (2023); Ji et al. (2023); Lyth and King (2024) adapt NCLMs style-controlled speech synthesis. Song et al. (2024); Du et al. (2024b) en-hance phoneme alignment in NCLMs to reduce er-ror. Wang et al. (2023b) proposes a unified NCLM for both speech generation and recognition tasks.
+Tokenizing speech signals into sequences of learnable, discrete units and then training a language model on the resulting unit sequences was initially proposed in the context of textless NLP (Hsu et al., 2021; Lakhotia et al.,2021; Kharitonov et al., 2021b; Nguyen et al.,2022), where the goal is to perform NLP tasks directly on spoken utterances without the need to first transcribe the speech into text. Recently,NCLMs that operates on tokens from Residual vec-tor quantization (RVQ)-based models (Zeghidour et al., 2021; Defossez et al., 2022) attract increased attention due to its high quality generation. For example, AudioLM (Borsos et al., 2022a) exhibits strong performance on long-term coherent speech continuation. Zero-shot TTS is a task where a model needs to synthesize speech in a target voice which was unseen during training, given only the target transcript and a short reference recording of the target voice. Framing zero-shot TTS as transcript-conditioned speech continuation, [VALL-E (2023)](ST2S/2023.01.05_VALL-E.md-E.md) and [SPEAR-TTS (2023)](ST2S/2023.02.07_SPEAR-TTS.mdTS.md) are the first applications of NCLMs on this task, significantly outperforming non-NCLM approaches. Zhang et al. (2023) extends VALL-E to cross-lingual TTS. Guo et al. (2022); Yang et al.(2023); Liu et al. (2023); Ji et al. (2023); Lyth and King (2024) adapt NCLMs style-controlled speech synthesis. Song et al. (2024); Du et al. (2024b) en-hance phoneme alignment in NCLMs to reduce er-ror. Wang et al. (2023b) proposes a unified NCLM for both speech generation and recognition tasks.
 Borsos et al. (2023) proposes an efficient parallel decoding method. NCLMs have also been suc-cessfully applied to other audio domains. Kreuk et al. (2022) applies NCLM to sound effects gener-ation, and Agostinelli et al. (2023); Donahue et al.(2023); Garcia et al. (2023); Copet et al. (2023) use NCLMs for music generation.
 Speech editing.This task requires a model to alter words or phrases within an utterance to match a target transcript, but the regions of the original speech not targeted for editing must re-main unchanged (see Fig. 1 for an example). Early methods achieve text-guided speech insertion and substitution by combining a single speaker TTS model and a voice conversion model to generate desired speech segment, which is then concate-nated with unedited part (Jin et al., 2017). Since the generation is not conditioned on the unedited part of the speech, the result sounds unnatural due to prosody mismatch and boundary artifacts (Morri-son et al., 2021). More recent speech editing mod-els have attempted to condition their generation on surrounding speech context. Tan et al. (2021)uses two unidirectional LSTM models with bidirec-tional fusion. Wang et al. (2022); Bai et al. (2022);Borsos et al. (2022b) uses the masked reconstruc-tion objective with Convolutional or Transformer models to further improve contextualization. Flu-entSpeech (Jiang et al., 2023b) is a diffusion-based speech editing model that achieves SotA perfor-mance on speech editing on LibriTTS and VCTK.
 The research community starts to investigate the possibility of having a unified model for both zero-shot TTS and speech editing. Yin et al. (2022);Jiang et al. (2023a) propose modular models for the two tasks, while our model is end-to-end. Con-current work SpeechX (Wang et al., 2023c) adapt VALL-E by prompt tuning for a range of tasks including speech editing and zero-shot TTS, but no human evaluation is conducted in their paper.
