--- a/Models/SpeechLM_TTS/2024.06.08_VALL-E_2.md
+++ b/Models/SpeechLM_TTS/2024.06.08_VALL-E_2.md
@@ -19,7 +19,7 @@
   - [Github]()
   - [Demo](https://aka.ms/valle2)
 - 文件:
-  - [ArXiv](../_PDF/2406.05370v2__VALL-E_2__Neural_Codec_Language_Models_are_Human_Parity_Zero-Shot_Text_to_Speech_Synthesizers.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2406.05370v2__VALL-E_2__Neural_Codec_Language_Models_are_Human_Parity_Zero-Shot_Text_to_Speech_Synthesizers.pdf)
   - [Publication] #TODO
 
 </details>
@@ -917,37 +917,37 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^03]: DBLP:conf/nips/RenRTQZZL19
 [^04]: NaturalSpeech
 [^05]: [VALL-E](2023.01.05_VALL-E.md)
-[^06]: [ELLA-V](2024.01.14_ELLA-V.md)
-[^07]: [RALL-E](2024.04.04_RALL-E.md)
-[^08]: [SoundStorm](2023.05.16_SoundStorm.md)
-[^09]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
-[^10]: [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)
-[^11]: [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md)
-[^12]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
-[^13]: [VCTK](../../../Datasets/2012.08.00_VCTK.md)
+[^06]: [ELLA-V](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md)
+[^07]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^08]: [SoundStorm](../SpeechLM/ST2S/2023.05.16_SoundStorm.md)
+[^09]: [Voicebox](../FlowMatching/2023.06.23_Voicebox.md.md)
+[^10]: [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^11]: [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md)
+[^12]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
+[^13]: [VCTK](../../Datasets/2012.08.00_VCTK.md)
 [^14]: DBLP:conf/iclr/ChenASBRZWCTLGO19
 [^15]: DBLP:conf/interspeech/WangTFYWZ20
 [^16]: DBLP:conf/nips/ArikCPPZ18
-[^17]: [YourTTS](../../E2E/2021.12.04_YourTTS.md)
+[^17]: [YourTTS](../E2E/2021.12.04_YourTTS.md)
 [^18]: zhang2023speak
-[^19]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
-[^20]: [Make-A-Voice](2023.05.30_Make-A-Voice.md)
-[^21]: [Mega-TTS](2023.06.06_Mega-TTS.md)
-[^22]: [Mega-TTS2](2023.07.14_Mega-TTS2.md)
-[^23]: [UniAudio](2023.10.01_UniAudio.md)
-[^24]: [BASE TTS](2024.02.12_BASE-TTS.md)
+[^19]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md
+[^20]: [Make-A-Voice](../SpeechLM/ST2S/2023.05.30_Make-A-Voice.md)
+[^21]: [Mega-TTS](../SpeechLM/ST2S/2023.06.06_Mega-TTS.md)
+[^22]: [Mega-TTS2](../SpeechLM/ST2S/2023.07.14_Mega-TTS2.md)
+[^23]: [UniAudio](../SpeechLM/ST2S/2023.10.01_UniAudio.md)
+[^24]: [BASE TTS](../SpeechLM/ST2S/2024.02.12_BASE-TTS.md)
 [^25]: chang2022maskgit
 [^26]: StyleTTS2
 [^27]: UniCATS
 [^28]: NaturalSpeech2
 [^29]: ho2020denoising
-[^30]: [Audiobox](../2023.12.25_Audiobox.md)
+[^30]: [Audiobox](../SpeechLM/2023.12.25_Audiobox.md)
 [^31]: lipman2022flow
 [^32]: dong2023polyvoice
-[^33]: [SpeechX](2023.08.14_SpeechX.md)
-[^34]: [VioLA](../ST2ST/2023.05.25_VioLA.md)
-[^35]: [AudioPaLM](../ST2ST/2023.06.22_AudioPaLM.md)
-[^36]: [PaLM2](../../TextLM/2023.05.17_PaLM2.md)
+[^33]: [SpeechX](../SpeechLM/ST2S/2023.08.14_SpeechX.md)
+[^34]: [VioLA](../SpeechLM/ST2ST/2023.05.25_VioLA.md)
+[^35]: [AudioPaLM](../SpeechLM/ST2ST/2023.06.22_AudioPaLM.md)
+[^36]: [PaLM2](../TextLM/2023.05.17_PaLM2.md)
 [^37]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
 [^38]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
 [^39]: Vocos
