--- a/Models/FlowMatching/2024.06.26_E2_TTS.md
+++ b/Models/FlowMatching/2024.06.26_E2_TTS.md
@@ -25,12 +25,14 @@
     - 复现 2024.07.10 [lucidrains/e2-tts-pytorch](https://github.com/lucidrains/e2-tts-pytorch)
   - [Demo](https://aka.ms/e2tts/)
 - 文件:
-  - [ArXiv](_PDF/2406.18009v2__E2_TTS__Embarrassingly_Easy_Fully_Non-AutoRegressive_Zero-Shot_TTS.pdf)
+  - [ArXiv](../Diffusion/_PDF/2406.18009v2__E2_TTS__Embarrassingly_Easy_Fully_Non-AutoRegressive_Zero-Shot_TTS.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
+
+<table><tr><td width="50%">
 
 This paper introduces ***Embarrassingly Easy Text-to-Speech (E2 TTS)***, a fully non-autoregressive zero-shot text-to-speech system that offers human-level naturalness and state-of-the-art speaker similarity and intelligibility.
 In the ***E2 TTS*** framework, the text input is converted into a character sequence with filler tokens.
@@ -41,32 +43,39 @@ The simplicity of ***E2 TTS*** also allows for flexibility in the input represen
 We propose several variants of ***E2 TTS*** to improve usability during inference.
 See this https [URL](https://aka.ms/e2tts/) for demo samples.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
 
-In recent years, text-to-speech (TTS) systems have seen significant improvements (**FastSpeech** [^1], **FastSpeech2** [^2], **Glow-TTS** [^3], **HiFi-GAN** [^4]), achieving a level of naturalness that is indistinguishable from human speech (**NaturalSpeech** [^5]).
+<table><tr><td width="50%">
+
+In recent years, text-to-speech (TTS) systems have seen significant improvements (**FastSpeech**[^01], **FastSpeech2**[^02], **Glow-TTS**[^03], **HiFi-GAN**[^04]), achieving a level of naturalness that is indistinguishable from human speech (**NaturalSpeech**[^05]).
 This advancement has further led to research efforts to generate natural speech for any speaker from a short audio sample, often referred to as an audio prompt.
-Early studies of zero-shot TTS used speaker embedding to condition the TTS system [^6] [^7].
-More recently, **VALL-E** [^8] proposed formulating the zero-shot TTS problem as a language modeling problem in the neural codec domain, achieving significantly improved speaker similarity while maintaining a simplistic model architecture.
-Various extensions were proposed to improve stability (**SpeechX** [^9], **VALL-T** [^10], **RALL-E** [^11]), and **VALL-E 2** [^12] recently achieved human-level zero-shot TTS with techniques including repetition-aware sampling and grouped code modeling.
+Early studies of zero-shot TTS used speaker embedding to condition the TTS system [^06] [^07].
+More recently, **VALL-E**[^08] proposed formulating the zero-shot TTS problem as a language modeling problem in the neural codec domain, achieving significantly improved speaker similarity while maintaining a simplistic model architecture.
+Various extensions were proposed to improve stability (**SpeechX**[^09], **VALL-T**[^10], **RALL-E**[^11]), and **VALL-E 2**[^12] recently achieved human-level zero-shot TTS with techniques including repetition-aware sampling and grouped code modeling.
 
 While the neural codec language model-based zero-shot TTS achieved promising results, there are still a few limitations based on its auto-regressive (AR) model-based architecture.
 Firstly, because the codec token needs to be sampled sequentially, it inevitably increases the inference latency.
-Secondly, a dedicated effort to figure out the best tokenizer (both for text tokens and audio tokens) is necessary to achieve the best quality (**SpeechX** [^9]).
-Thirdly, it is required to use some tricks to stably handle long sequences of audio codecs, such as the combination of AR and non-autoregressive (NAR) modeling (**VALL-E** [^8],**VALL-E 2** [^12]), multi-scale transformer (**UniAudio** [^13]), grouped code modeling (**VALL-E 2** [^12]).
+Secondly, a dedicated effort to figure out the best tokenizer (both for text tokens and audio tokens) is necessary to achieve the best quality (**SpeechX**[^09]).
+Thirdly, it is required to use some tricks to stably handle long sequences of audio codecs, such as the combination of AR and non-autoregressive (NAR) modeling (**VALL-E**[^08], **VALL-E 2**[^12]), multi-scale transformer (**UniAudio**[^13]), grouped code modeling (**VALL-E 2**[^12]).
 
 Meanwhile, several fully NAR zero-shot TTS models have been proposed with promising results.
 Unlike AR-based models, fully NAR models enjoy fast inference based on parallel processing.
-**NaturalSpeech2** [^14] and **NaturalSpeech3** [^15] estimate the latent vectors of a neural audio codec based on diffusion models (**DDPM** [^16], [^17]).
-**Voicebox** [^18] and **MatchaTTS** [^19] used a **flow-matching** [^20] model conditioned by an input text.
+**NaturalSpeech2**[^14] and **NaturalSpeech3**[^15] estimate the latent vectors of a neural audio codec based on diffusion models (**DDPM**[^16], [^17]).
+**Voicebox**[^18] and **MatchaTTS**[^19] used a **Flow-Matching**[^20] model conditioned by an input text.
 However, one notable challenge for such NAR models is how to obtain the alignment between the input text and the output audio, whose length is significantly different.
-**NaturalSpeech2** [^14], **NaturalSpeech3** [^15], and **Voicebox** used a frame-wise phoneme alignment for training the model.
-**MatchaTTS** [^19], on the other hand, used monotonic alignment search (MAS) (**Grad-TTS** [^21], **Glow-TTS** [^3]) to automatically find the alignment between input and output.
+**NaturalSpeech2**[^14], **NaturalSpeech3**[^15], and **Voicebox**[^18] used a frame-wise phoneme alignment for training the model.
+**MatchaTTS**[^19], on the other hand, used monotonic alignment search (MAS) (**Grad-TTS**[^21], **Glow-TTS**[^03]) to automatically find the alignment between input and output.
 While MAS could alleviate the necessity of the frame-wise phoneme aligner, it still requires an independent duration model to estimate the duration of each phoneme during inference.
-More recently, **E3 TTS** [^22] proposed using cross-attention from the input sequence, which required a carefully designed **U-Net** [^23] architecture.
+More recently, **E3 TTS**[^22] proposed using cross-attention from the input sequence, which required a carefully designed **U-Net**[^23] architecture.
 As such, fully NAR zero-shot TTS models require either an explicit duration model or a carefully designed architecture.
 One of our findings in this paper is that such techniques are not necessary to achieve high-quality zero-shot TTS, and they are sometimes even harmful to naturalness.
-<u>Footnote: Concurrent with our work, **Seed-TTS** [^24] proposed a diffusion model-based zero-shot TTS, named **Seed-TTS**$_{DiT}$.
-Although it appears to share many similarities with our approach, the authors did not elaborate on the details of their model, making it challenging to compare with our work.</u>
+
+Note: Concurrent with our work, **Seed-TTS** [^24] proposed a diffusion model-based zero-shot TTS, named **Seed-TTS**$_{DiT}$.
+Although it appears to share many similarities with our approach, the authors did not elaborate on the details of their model, making it challenging to compare with our work.
 
 Another complexity in TTS systems is the choice of the text tokenizer.
 As discussed above, the AR-model-based system requires a careful selection of tokenizer to achieve the best result.
@@ -81,6 +90,10 @@ The mel spectrogram generator, composed of a vanilla Transformer with U-Net styl
 Despite its simplicity, ***E2 TTS*** achieves state-of-the-art zero-shot TTS capabilities that are comparable to, or surpass, previous works, including Voicebox and NaturalSpeech 3.
 The simplicity of ***E2 TTS*** also allows for flexibility in the input representation.
 We propose several variants of ***E2 TTS*** to improve usability during inference.
+
+</td><td>
+
+</td></tr></table>
 
 注: 对原文内容进行了重排
 - 第三章 方法 对应 原文第二章
@@ -98,20 +111,19 @@ We propose several variants of ***E2 TTS*** to improve usability during inferenc
 
 ### 3.1·Training: 训练
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Fig.01 (a) provides an overview of ***E2 TTS*** training.
 Suppose we have a training audio sample $s$ with transcription $y=(c_1, c_2, ..., c_M)$, where $c_i$ represents the $i$-th character of the transcription.
-<u>Footnote: Alternatively, we can represent $y$ as a sequence of Unicode bytes [^25].</u>
+
+Note: Alternatively, we can represent $y$ as a sequence of Unicode bytes [^25].
+
 First, we extract its mel-filterbank features $\hat{s}\in\mathbb{R}^{D\times T}$, where $D$ denotes the feature dimension and $T$ represents the sequence length.
 We then create an extended character sequence $\tilde{y}$, where a special filler token $\langle F\rangle$ is appended to $y$ to make the length of $\tilde{y}$ equal to $T$.
-<u>Footnote: We assume $M\le T$, which is almost always valid.</u>
 
-</details>
-<br>
+Note: We assume $M\le T$, which is almost always valid.
 
-![Images/2024.06.26.E2_TTS.Fig.01a.png](Images/2024.06.26_E2_TTS_Fig.01a.png)
+</td><td>
 
 图 01 (a) 展示了 ***E2 TTS*** 的训练过程.
 假设我们有训练用的音频样本 $s$, 对应的转写文本为 $y=(c_1, c_2, ..., c_M)$, 其中 $c_i$ 表示第 $i$ 个字符. <u>注: 也可以用 Unicode 字节序列来表示 $y$.</u>
@@ -123,24 +135,29 @@ $$
 \hat{y} = (c_1, c_2, \ldots, c_M, \underbrace{\langle F\rangle, \ldots, \langle F\rangle}_{(T-M) \text{ times}}).\tag{01}
 $$
 
-<details>
-<summary>原文</summary>
+</td></tr>
+<tr><td colspan="2">
+
+![Images/2024.06.26.E2_TTS.Fig.01a.png](../Diffusion/Images/2024.06.26_E2_TTS_Fig.01a.png)
+
+</td></tr>
+<tr><td>
 
 A spectrogram generator, consisting of a vanilla Transformer [^26] with **U-Net** [^23] style skip connection, is then trained based on the speech infilling task (**Voicebox** [^18]).
 More specifically, the model is trained to learn the distribution $P(m\odot\hat{s}|(1-m)\odot\hat{s}, \hat{y})$, where $m\in\{0,1\}^{D\times T}$ represents a binary temporal mask, and $\odot$ is the Hadamard product.
 ***E2 TTS*** uses the conditional **flow-matching** [^20] to learn such distribution.
 
-</details>
-<br>
+</td><td>
 
 由原始 Transformer 和 U-Net 类型的跳跃连接构成的频谱生成器, 基于语音填充任务进行训练.
 具体来说, 模型被训练于学习概率分布 $P(m\odot\hat{s}|(1-m)\odot\hat{s}, \hat{y})$, 其中 $m\in\{0,1\}^{D\times T}$ 表示二值时序掩码, $\odot$ 为 Hadamard 积.
 ***E2 TTS*** 使用条件化流匹配来学习这样的分布.
 
+</td></tr></table>
+
 ### 3.2·Inference: 推理
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Fig.01 (b) provides an overview of the inference with ***E2 TTS***.
 Suppose we have an audio prompt $s^{aud}$ and its transcription $y^{aud}=(c'_1, c'_2, ..., c'_{M^{aud}})$ to mimic the speaker characteristics.
@@ -151,10 +168,7 @@ The target duration is internally represented by the frame length $T^{gen}$.
 First, we extract the mel-filterbank features $\hat{s}^{aud}\in\mathbb{R}^{D\times T^{aud}}$ from $s^{aud}$.
 We then create an extended character sequence $\hat{y}'$ by concatenating $y^{aud}$, $y^{text}$, and repeated $\langle F\rangle$, as follows:
 
-</details>
-<br>
-
-![Images/2024.06.26.E2_TTS.Fig.01b.png](Images/2024.06.26_E2_TTS_Fig.01b.png)
+</td><td>
 
 图 01 (b) 展示了 ***E2 TTS*** 的推理过程.
 假设有参考音频 $s^{aud}$ 和它的转写文本 $y^{aud}=(c'_1, c'_2, ..., c'_{M^{aud}})$, 用来模仿说话人的特征.
@@ -166,12 +180,20 @@ We then create an extended character sequence $\hat{y}'$ by concatenating $y^{au
 首先, 我们提取参考音频 $s^{aud}$ 的梅尔滤波器组特征 $\hat{s}^{aud}\in\mathbb{R}^{D\times T^{aud}}$.
 然后我们将 $y^{aud}$, $y^{text}$, 以及重复 $\langle F\rangle$ 连接起来, 得到扩展的字符序列 $\hat{y}'$.
 
+</td></tr>
+<tr><td colspan="2">
+
+![Images/2024.06.26.E2_TTS.Fig.01b.png](../Diffusion/Images/2024.06.26_E2_TTS_Fig.01b.png)
+
+</td></tr>
+<tr><td>
+
 $$
   \hat{y}' = (c'_1, c'_2, \ldots, c'_{M^{aud}}, c''_1, c''_2, \ldots, c''_{M^{text}}, \underbrace{\langle F\rangle, \ldots, \langle F\rangle}_{\mathcal{T} \text{ times}}),\tag{02}
 $$
 
-<details>
-<summary>原文</summary>
+</td></tr>
+<tr><td>
 
 where $\mathcal{T}=T^{aud}+T^{gen}-M^{aud}-M^{text}$, which ensures the length of $\hat{y}'$ is equal to $T^{aud}+T^{gen}$.
 <u>Footnote: To ensure $\mathcal{T}\ge 0$, $T^{gen}$ needs to satisfy $T^{gen}\ge M^{aud}+M^{text}-T^{aud}$, which is almost always valid in the TTS scenario.</u>
@@ -179,8 +201,7 @@ where $\mathcal{T}=T^{aud}+T^{gen}-M^{aud}-M^{text}$, which ensures the length o
 The mel spectrogram generator then generates mel-filterbank features $\tilde{s}$ based on the learned distribution of $P(\tilde{s}|[\hat{s}^{aud}; z^{gen}], \hat{y}')$, where $z^{gen}$ is an all-zero matrix with a shape of ${D\times T^{gen}}$, and $[;]$ is a concatenation operation in the dimension of $T^*$.
 The generated part of $\tilde{s}$ are then converted to the speech signal based on the vocoder.
 
-</details>
-<br>
+</td><td>
 
 其中 $\mathcal{T} = T^{aud} + T^{gen} - M^{aud} - M^{text}$, 这保证 $\hat{y}'$ 的长度等于 $T^{aud}+T^{gen}$.
 <u>注: 为了确保 $\mathcal{T}\ge 0$, $T^{gen}$ 需要满足 $T^{gen}\ge M^{aud}+M^{text}-T^{aud}$, 这在 TTS 场景下几乎总是成立的.</u>
@@ -189,7 +210,11 @@ The generated part of $\tilde{s}$ are then converted to the speech signal based 
 其中 $z^{gen}$ 为全零矩阵, 形状为 ${D\times T^{gen}}$, $[;]$ 为在 $T^*$ 维度上的连接操作.
 $\tilde{s}$ 的生成部分基于声码器被转换为语音信号.
 
+</td></tr></table>
+
 ### 3.3·Flow-Matching-Based Mel Spectrogram Generator: 基于流匹配的梅尔频谱生成器
+
+<table><tr><td width="50%">
 
 ***E2 TTS*** leverages conditional **flow-matching** [^20], which incorporates the principles of continuous normalizing flows [^27].
 This model operates by transforming a simple initial distribution $p_0$ into a complex target distribution $p_1$ that characterizes the data.
@@ -213,7 +238,13 @@ Then, $m\odot\hat{s}$, $s_t$, $\tilde{y}$ are all stacked to form a tensor with 
 Finally, an embedding representation, $\hat{t}\in\mathbb{R}^D$, of $t$ is appended to form the input tensor with a shape of $\mathbb{R}^{D\times (T+1)}$ to the Transformer.
 The Transformer is trained to output a vector field $v_t$ with the conditional flow-matching objective $\mathcal{L}^{CFM}$.
 
+</td><td>
+
+</td></tr></table>
+
 ### 3.4·Relationship to Voicebox: 与 Voicebox 的关联
+
+<table><tr><td width="50%">
 
 ***E2 TTS*** has a close relationship with the Voicebox.
 From the perspective of the Voicebox, ***E2 TTS*** replaces a frame-wise phoneme sequence used in conditioning with a character sequence that includes a filler token.
@@ -221,12 +252,18 @@ This change significantly simplifies the model by eliminating the need for a gra
 From another viewpoint, the mel spectrogram generator of ***E2 TTS*** can be viewed as a joint model of the grapheme-to-phoneme converter, the phoneme duration model, and the audio model of the Voicebox.
 This joint modeling significantly improves naturalness while maintaining speaker similarity and intelligibility, as will be demonstrated in our experiments.
 
+</td><td>
+
+</td></tr></table>
+
 ### 3.5·Extension of E2 TTS: E2 TTS 的扩展
 
-![Images/2024.06.26.E2_TTS.Fig.02a.png](Images/2024.06.26_E2_TTS_Fig.02.png)
+![Images/2024.06.26.E2_TTS.Fig.02a.png](../Diffusion/Images/2024.06.26_E2_TTS_Fig.02.png)
 Fig. 2. An overview of the training (left) and the inference (right) processes of E2 TTS X1.
 
 #### 3.5.1·Extension 1: Eliminating the need for transcription of audio prompts in inference
+
+<table><tr><td width="50%">
 
 In certain application contexts, obtaining the transcription of the audio prompt can be challenging.
 To eliminate the requirement of the transcription of the audio prompt during inference, we introduce an extension, illustrated in Fig.02.
@@ -244,7 +281,13 @@ One method is to simply apply ASR to the masked region during training, which is
 In our experiment, we employed the **Montreal Forced Aligner** [^28] to determine the start and end times of words within each training data sample.
 The masked region was determined in such a way that we ensured not to cut the word in the middle.
 
+</td><td>
+
+</td></tr></table>
+
 #### 3.5.2·Extension 2: Enabling explicit indication of pronunciation for parts of words in a sentence
+
+<table><tr><td width="50%">
 
 In certain scenarios, users want to specify the pronunciation of a specific word such as unique foreign names.
 Retraining the model to accommodate such new words is both expensive and time-consuming.
@@ -256,6 +299,10 @@ During inference, we simply replace the target word with phoneme sequences enclo
 
 It's important to note that $y$ is still a simple sequence of characters, and whether the character represents a word or a phoneme is solely determined by the existence of parentheses and their content.
 It's also noteworthy that punctuation marks surrounding the word are retained during replacement, which allows the model to utilize these punctuation marks even when the word is replaced with phoneme sequences.
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
@@ -408,41 +455,41 @@ Despite its simplicity, ***E2 TTS*** achieved state-of-the-art zero-shot TTS cap
 The simplicity of ***E2 TTS*** also allowed for flexibility in the input representation.
 We proposed several variants of ***E2 TTS*** to improve usability during inference.
 
-[^1]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
-[^2]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
-[^3]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
-[^4]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
-[^5]: [NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md)
-[^6]: [Neural Voice Cloning with a Few Samples]
-[^7]: [Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis]
-[^8]: [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)
-[^9]: [SpeechX](../SpeechLM/2023.08.14_SpeechX.md)
-[^10]: [VALL-T](../SpeechLM/2024.01.25_VALL-T.md)
-[^11]: [RALL-E](../SpeechLM/2024.04.04_RALL-E.md)
-[^12]: [VALL-E 2](../SpeechLM/2024.06.08_VALL-E_2.md)
-[^13]: [UniAudio](../SpeechLM/2023.10.01_UniAudio.md)
-[^14]: [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)
-[^15]: [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)
-[^16]: [DDPM](2020.06.19_DDPM.md)
-[^17]: []
-[^18]: [Voicebox](../../Models/SpeechLM/2023.06.23_VoiceBox.md)
+[^01]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
+[^02]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
+[^03]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
+[^04]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
+[^05]: [NaturalSpeech](../E2E/2022.05.09_NaturalSpeech.md)
+[^06]: [Neural Voice Cloning with a Few Samples]
+[^07]: [Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis]
+[^08]: [VALL-E](../SpeechLM_TTS/2023.01.05_VALL-E.md)
+[^09]: [SpeechX](../SpeechLM/ST2S/2023.08.14_SpeechX.md)
+[^10]: [VALL-T](../SpeechLM/ST2S/2024.01.25_VALL-T.md)
+[^11]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^12]: [VALL-E 2](../SpeechLM_TTS/2024.06.08_VALL-E_2.md)
+[^13]: [UniAudio](../SpeechLM/ST2S/2023.10.01_UniAudio.md)
+[^14]: [NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md)
+[^15]: [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^16]: [DDPM](../Diffusion/_2020.06.19_DDPM.md)
+[^17]: [Score-Based Generative Modeling through Stochastic Differential Equations](../Diffusion/_2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
+[^18]: [Voicebox](2023.06.23_Voicebox.md)
 [^19]: [Matcha-TTS](2023.09.06_Matcha-TTS.md)
-[^20]: [Flow-Matching](../Diffusion/2022.10.06_Flow_Matching.md)
+[^20]: [Flow-Matching](_2022.10.06_Flow_Matching.md)
 [^21]: [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)
-[^22]: [E3 TTS](../../Models/Diffusion/2023.11.02_E3_TTS.md)
-[^23]: [U-Net](../../Models/_Basis/U-Net.md)
+[^22]: [E3 TTS](../Diffusion/2023.11.02_E3_TTS.md)
+[^23]: [U-Net](../_Basis/U-Net.md)
 [^24]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
 [^25]: [Bytes are All You Need: End-To-End Multilingual Speech Recognition and Synthesis with Bytes]
-[^26]: [Transformer](../../Models/_Transformer/2017.06.12_Transformer.md)
+[^26]: [Transformer](../_Basis/2017.06.12_Transformer.md)
 [^27]: [NeuralODE]
-[^28]: [MFA]
-[^29]: [The Carnegie Mellon University Pronouncing Dictionary](../../Models/TTS1_Text_Analysis/CMUdict.md)
+[^28]: [MFA](../Tricks/Montreal_Forced_Aligner.md)
+[^29]: [The Carnegie Mellon University Pronouncing Dictionary](../_Basis/CMUdict.md)
 [^30]: [LibriHeavy](../../Datasets/2023.09.15_Libriheavy.md)
 [^31]: [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)
 [^32]: [BigVGAN](../Vocoder/2022.06.09_BigVGAN.md)
-[^33]: [Classifier-Free Diffusion Guidance](2022.07.26_Classifier-Free_Guidance.md)
+[^33]: [Classifier-Free Diffusion Guidance](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md)
 [^34]: [An Investigation of Noise Robustness for Flow-Matching-Based Zero-Shot TTS]
 [^35]: [LibriSpeech-PC](../../Datasets/2023.10.04_LibriSpeech-PC.md)
 [^36]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
-[^37]: [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md)
-[^38]: [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md)
+[^37]: [HuBERT](../Tokenizers/2021.06.14_HuBERT.md)
+[^38]: [WavLM](../Tokenizers/2021.10.26_WavLM.md)
