--- a/Models/SpeechLM_TTS/2024.07.11_MELLE.md
+++ b/Models/SpeechLM_TTS/2024.07.11_MELLE.md
@@ -23,7 +23,7 @@
   - [Github]()
   - [Demo](https://aka.ms/melle)
 - 文件:
-  - [ArXiv](../_PDF/2407.08551v1__MELLE__Autoregressive_Speech_Synthesis_without_Vector_Quantization.pdf)
+  - [ArXiv](../SpeechLM/_PDF/2407.08551v1__MELLE__Autoregressive_Speech_Synthesis_without_Vector_Quantization.pdf)
   - [Publication] #TODO
 
 </details>
@@ -76,7 +76,7 @@ In response to the aforementioned challenges, we first substitute cross-entropy 
 Second, we design a latent sampling module, derived from variational inference, functions as a sequence sampling strategy thereby enhancing the diversity of the generated audio samples.
 As an option, by adjusting the reduction factor, ***MELLE*** can predict multiple frames at one step and accelerate inference, thereby further alleviating the robustness issues associated with long-sequence modeling and maintaining satisfactory performance.
 
-We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md) training dataset and the relatively small 960-hour [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md) training dataset.
+We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md) training dataset and the relatively small 960-hour [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md) training dataset.
 Following recent works, we use LibriSpeech test-clean set for zero-shot TTS evaluation.
 Experimental results demonstrate that the proposed ***MELLE*** is on par with **VALL-E 2 (2024)** in objective metrics, and surpasses **VALL-E 2 (2024)** in subjective metrics.
 It also outperforms previous neural codec language models, including VALL-E and its other variants, achieving superior performance across multiple metrics that reflect naturalness, robustness, similarity, and inference efficiency.
@@ -93,15 +93,15 @@ For subjective evaluations, ***MELLE*** is more favorably received by human list
 Traditional speech synthesis methods can be categorized concatenative systems, parametric systems, and end-to-end neural systems.
 Concatenative TTS systems deconstruct original audio waves into smaller segments and then reassembles them using algorithms like Viterbi, followed by signal processing techniques, to create new audio waves.
 Parametric TTS systems convert speech waves into spectrograms, utilizing acoustic parameters such as fundamental frequency and duration to synthesize new audio outputs.
-With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md)).
+With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)).
 
-The advanced end-to-end neural TTS models, such as [Tacotron](../../Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
+The advanced end-to-end neural TTS models, such as [Tacotron](../Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
 TransformerTTS employs Transformer-based encoder-decoder network as the main framework to replace RNN structures in Tacotron.
 FastSpeech further improve the speech quality and decoding efficiency using the non-autoregressive generation model with a duration module.
 These model are trained on small-scale, clean, single-speaker or few-speaker dataset, such as LJSpeech and LibriTTS.
 Our ***MELLE*** leverages the well-established mel-spectrogram as the intermediate representation, however, it differs significantly in two key aspects:
 (1) we adopt decoder-only network as foundational structure with improved methods, such as variational inference and spectrogram flux loss,
-(2) ***MELLE*** is capable of zero-shot TTS via training on large-scale speech-text paired data, like [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md).
+(2) ***MELLE*** is capable of zero-shot TTS via training on large-scale speech-text paired data, like [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md).
 
 </details>
 <br>
@@ -136,10 +136,10 @@ VALL-E employs two-stage modeling method, with an autoregressive model for gener
 In parallel to our work, **VALL-E 2 (2024)** shares the same architecture as VALL-E but employs a repetition-aware sampling strategy that promotes more deliberate sampling choices.
 
 Other studies have investigated fully non-autoregressive approaches to increase the speed of model inference.
-For instance, [SoundStorm](2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
-[StyleTTS2](../2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../../Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
-[Voicebox](../2023.06.23_VoiceBox.md) and [Audiobox](../2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
-Recently, [E2 TTS](../../Diffusion/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
+For instance, [SoundStorm](../SpeechLM/ST2S/2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
+[StyleTTS2](../SpeechLM/2023.06.13_StyleTTS2.md) and [Natur../Diffusion/2024.03.05_NaturalSpeech3.mdalSpeech3.md) use diffusion model to achieve better TTS synthesis.
+[Voicebox](../2023.06.23_VoiceBox.md) and [Audiobox](../2023.1../SpeechLM/2023.12.25_Audiobox.mdnon-autoregressive flow-matching based models for transcript-guided speech generation.
+Recently, [E2 TTS](../FlowMatching/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
 Different previous works, ***MELLE*** leverages continuous-valued tokens based autoregressive language modeling approach with variational inference for text-to-speech synthesis.
 
 </details>
@@ -183,7 +183,7 @@ $$
 
 where $\pmb{y}_{<t}$ denotes $[\pmb{y}_0, \pmb{y}_1,..., \pmb{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***.
 
-Inspired by previous neural TTS models ([TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
+Inspired by previous neural TTS models ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
 Formally, the original mel-spectrogram sequences $\pmb{y}$ will be partitioned into $\pmb{y}^r = [\pmb{y}_{0:r}, \pmb{y}_{r:2r}, ..., \pmb{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
 
 $$
@@ -220,11 +220,11 @@ $$
 
 ### 3.2·Architecture: 架构
 
-![Images/2024.07.11_MELLE_Fig.01.png](../Images/2024.07.11_MELLE_Fig.01.png)
+![Images/2024.07.11_MELLE_Fig.01.png](../SpeechLM/Images/2024.07.11_MELLE_Fig.01.png)
 
 <table><tr><td width="50%">
 
-As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)).
+As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
 Finally, a vocoder is used to recover the speech from generated mel-spectrogram.
 
 Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram.
@@ -270,9 +270,9 @@ The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by t
 <table><tr><td width="50%">
 
 Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model.
-For example, Tacotron-like models ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
+For example, Tacotron-like models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
 Neural codec language models (**VALL-E (2023)**; **VALL-E X (2023)**) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search;
-Diffusion-based ([NaturalSpeech2](../../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
+Diffusion-based ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
 
 In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left).
 Based on $\pmb{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\pmb{z}_t$ is sampled.
@@ -299,7 +299,7 @@ Note that the latent sampling module is differentiable with the reparameterizati
 </details>
 <br>
 
-![](../Images/2024.07.11_MELLE_Fig.02.png)
+![](../SpeechLM/Images/2024.07.11_MELLE_Fig.02.png)
 
 采样策略是文本转语音系统的核心部分, 不仅在输出中引入多样性, 还能增强模型的泛化能力.
 例如, Tacotron 类模型在推理时在他们的预网络中启用随机失活以引入变化.
@@ -333,7 +333,7 @@ $$
 
 Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an `<EOS>` token to indicate the end of generation.
 Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
-Following previous neural TTS models ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
+Following previous neural TTS models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
 During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
 </details>
@@ -371,7 +371,7 @@ $$
 
 <table><tr><td width="50%">
 
-The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)).
+The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
 The regression loss, $\mathcal{L}_{\text{reg}}$, is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
 It is defined as follows:
 
@@ -478,7 +478,7 @@ $$
 
 <table><tr><td width="50%">
 
-We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](../ST2ST/2021.10.14_SpeechT5.md).
+We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](../ST2ST/202../SpeechLM/ST2ST/2021.10.14_SpeechT5.md
 During this calculation, positive and negative frames are extremely imbalanced, as each utterance has only one positive frame indicating "stop." To address this, we impose a larger weight (100) for the positive frames in the BCE loss.
 
 </details>
