--- a/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
+++ b/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
@@ -27,3 +27,16 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+Generative models for speech synthesis face a fundamental trade-off: discrete tokens ensure stability but sacrifice expressivity, while continuous signals retain acoustic richness but suffer from error accumulation due to task entanglement. 
+This challenge has driven the field towards multi-stage pipelines that rely on pre-trained speech tokenizers, but these create a semantic-acoustic divide, limiting holistic and expressive speech generation.  
+We resolve these dilemma through hierarchical semantic-acoustic modeling with semi-discrete residual representations and present a novel tokenizer-free TTS model--\modelname{}.
+Our framework introduces a differentiable quantization bottleneck that induces natural specialization: 
+a Text-Semantic Language Model (TSLM) generates semantic-prosodic plans, while a Residual Acoustic Model (RALM) recovers fine-grained acoustic details.
+This hierarchical semantic-acoustic representation guides a local diffusion-based decoder to generate high-fidelity speech latents. 
+Critically, the entire architecture is trained end-to-end under a simple diffusion objective, eliminating dependency on external speech tokenizers. 
+Trained on a massive 1.8 million hours of bilingual corpus, our \modelname{}-0.5B model achieves state-of-the-art zero-shot TTS performance among open-source systems, demonstrating that our approach delivers expressive and stable synthesis. 
+Besides, VoxCPM shows the capability to comprehend text to infer and generate appropriate prosody and style, delivering speech with context-aware expressiveness and natural flow. 
+To facilitate community-driven research and development, \modelname{} is publicly accessible under Apache 2.0.
