--- a/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
+++ b/Models/SpeechLM_TTS/2025.09.29_VoxCPM.md
@@ -573,3 +573,23 @@ Our experiments were conducted under the assumption that the use of any referenc
 To mitigate these risks, we strongly advocate for the development of robust synthesized speech detection algorithms.
 
 Furthermore, we believe it is crucial to establish clear ethical guidelines and reporting mechanisms for the responsible deployment of such technology.
+
+## 6·Contributors
+
+\modelname{} is a collaborative release by the Tsinghua Shenzhen International Graduate School (SIGS) Human-Computer Speech Interaction Lab (THUHCSI), Natural Language Processing Lab at Tsinghua University (THUNLP) and ModelBest.
+
+We would also like to thank the OpenBMB community for all their support.
+
+**Core Contributors** \quad
+Yixuan Zhou, Guoyang Zeng, Xin Liu, Xiang Li, Renjie Yu, Ziyang Wang, Runchuan Ye, Weiyue Sun, Jiancheng Gui, Kehan Li, Zhiyong Wu, Zhiyuan Liu
+
+**Other Contributors (Alphabetical order)** \quad
+Biyuan Lin, Chao Jia, Chenzhe Jing, Hongyu Liu, Jie Cai, Jie Zhou, Junshao Guo, Lei Chen, Rongting Tang, Rui Li, Ruiqi Shao, Qundong Shi, Shuo Wang, Siyuan Huang, Shun Lei, Wenxi Yang, Xiaoshuang Wang, Yihang He, Zichao Nie
+
+\newpage
+
+\bibliographystyle{citation}
+
+\bibliography{citation}
+
+\end{document}
